Can't turn off Freestyle line anti-aliasing in Eevee #65372

Closed
opened 2019-06-01 00:18:54 +02:00 by John Porter · 5 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.01

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-05-31 15:17, hash: f87bba0368

Short description of error
Can't turn off Freestyle line anti-aliasing in Eevee

Exact steps for others to reproduce the error

  • New scene, create a sphere or other object
  • In the render tab, set Sampling to 1, and Film filter size to 0px. Render to see no anti-aliasing. All good so far.
  • In the render tab, check Freestyle and render. Note that Freestyle lines have anti-aliasing applied even though it should not.
  • Switch to Cycles, set sampling to 1, and film width to .01. Render to observe that Freestyle lines are correctly rendered with hard edges(no anti-aliasing applied).
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 417.01 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-05-31 15:17, hash: `f87bba0368` **Short description of error** Can't turn off Freestyle line anti-aliasing in Eevee **Exact steps for others to reproduce the error** - New scene, create a sphere or other object - In the render tab, set Sampling to 1, and Film filter size to 0px. Render to see no anti-aliasing. All good so far. - In the render tab, check Freestyle and render. Note that Freestyle lines have anti-aliasing applied even though it should not. - Switch to Cycles, set sampling to 1, and film width to .01. Render to observe that Freestyle lines are correctly rendered with hard edges(no anti-aliasing applied).
Author

Added subscriber: @John-Porter

Added subscriber: @John-Porter

Added subscribers: @fclem, @brecht

Added subscribers: @fclem, @brecht
Clément Foucault was assigned by Brecht Van Lommel 2019-06-01 03:07:07 +02:00

While it would be useful to support this, I don't know that I would consider the ability to disable antialiasing actually a supported feature. I'll let @fclem decide if this is considered a bug or not.

While it would be useful to support this, I don't know that I would consider the ability to disable antialiasing actually a supported feature. I'll let @fclem decide if this is considered a bug or not.

This issue was referenced by d77c2305a3

This issue was referenced by d77c2305a3d6c371b01d8056ee076da2efa12cba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65372
No description provided.