Fix T65372: Can't turn off Freestyle line anti-aliasing in Eevee

Freestyle was not copying the eevee settings when creating a scene
copy.