source/blender/freestyle/intern/blender_interface/BlenderStrokeRenderer.cpp
@@ -121,6 +121,9 @@ BlenderStrokeRenderer::BlenderStrokeRenderer(Render *re, int render_count) : Str
   if (old_scene->id.properties) {
     freestyle_scene->id.properties = IDP_CopyProperty_ex(old_scene->id.properties, 0);
   }
+  // Copy eevee render settings.
+  freestyle_scene->eevee = old_scene->eevee;
+  freestyle_scene->eevee.light_cache = NULL;
 
   /* Render with transparent background. */
   freestyle_scene->r.alphamode = R_ALPHAPREMUL;
